--- a/stil/index.css
+++ b/stil/index.css
@@ -16,12 +16,10 @@ body {
     margin: 0;
     padding: 0;
 }
-
-/* Hero Bereich */
 .hero {
     position: relative;
     width: 100%;
-    height: 100vh; /* Füllt den Bildschirm */
+    height: 100vh;
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -31,7 +29,7 @@ body {
 .hero img {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Bild wird vollständig sichtbar, schneidet aber nicht unproportional */
+    object-fit: cover;
     position: absolute;
     top: 0;
     left: 0;
@@ -43,7 +41,8 @@ body {
     z-index: 2;
     text-align: center;
     color: white;
-    text-shadow: 2px 2px 10px rgba(0,0,0,0.7);
+    color: rgba(255, 255,255, 0.6);
+    text-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 .hero-overlay h1 {
@@ -51,7 +50,11 @@ body {
     margin: 0;
 }
 
-/* Text und Button unterhalb des Bildes */
+.hero-overlay p {
+    font-size: 2rem;
+    margin: 0;
+}
+
 .text-section {
     max-width: 800px;
     margin: 40px auto;
