Galerie etwas angepasst und Zeitstrahl hinzugefügt

--- a/public/stil/footer.css
+++ b/public/stil/footer.css
@@ -88,7 +88,7 @@
     color: var(--kleiner-textfarbe);
 }
 
-.footer-dark a.datenschutz {
+.footer-dark a.link {
     position: relative;
     background-color: var(--hintergrundfarbe);
     color: var(--kleiner-textfarbe);
