--- a/public/stil/contact.css
+++ b/public/stil/contact.css
@@ -1,6 +1,17 @@
+  :root {
+    --textfarbe: #e0e0e0;
+    --wichtige-textfarbe: #3274ED;
+    --kleiner-textfarbe: #333;
+    --button-farbe: #3274ED;
+    --buttonhoverfarbe: #6999F2;
+    --hintergrundfarbe: #1a1a1a;
+    --rahmenfarbe: #afababb4;
+    --kartenhintergrund: #2e2c2c;
+}
+  
   body {
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
+    background-color: var(--hintergrundfarbe);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -8,7 +19,7 @@
     margin: 0;
   }
   .container {
-    background-color: white;
+    background-color: var(--kartenhintergrund);
     padding: 30px 40px;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.1);
@@ -29,19 +40,19 @@
     margin-top: 5px;
     padding: 10px;
     border-radius: 8px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--rahmenfarbe);
     box-sizing: border-box;
   }
   button {
-    background-color: #4CAF50;
-    color: white;
+    background-color: var(--button-farbe);
+    color: var(--textfarbe);
     font-weight: bold;
     border: none;
     cursor: pointer;
     margin-top: 20px;
   }
   button:hover {
-    background-color: #45a049;
+    background-color: var(--buttonhoverfarbe);
   }
   .success {
     color: green;
