--- a/public/stil/index.css
+++ b/public/stil/index.css
@@ -290,3 +290,11 @@ body {
     .nav { font-size: 2.3rem; }
     #close { font-size: 2.5rem; right: 20px; }
 }
+
+.section-separator {
+    height: 4px;
+    width: 60%;
+    margin: 50px auto;
+    background: linear-gradient(to right, transparent, var(--wichtige-textfarbe), transparent);
+    border-radius: 2px;
+}
